src/objects/Cartera_Actual_Real__c.object
<CustomObject>
    <fields>
        <fullName>Calidad__c</fullName>
        <label>Calidad</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claf__c</fullName>
        <label>Claf</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datacredito__c</fullName>
        <label>Datacredito</label>
        <referenceTo>Datacredito__c</referenceTo>
        <relationshipLabel>Carteras Actual Real</relationshipLabel>
        <relationshipName>Carteras_Actual_Real</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Es_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Es Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero__c</fullName>
        <label>Numero</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Porcentaje_Deuda__c</fullName>
        <label>Porcentaje_Deuda</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Porcentaje_Part__c</fullName>
        <label>Porcentaje_Part</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saldo_Actual__c</fullName>
        <label>Saldo_Actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saldo_Mora__c</fullName>
        <label>Saldo_Mora</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Porcentaje_Deuda__c</fullName>
        <label>Total Porcentaje Deuda</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Porcentaje_Part__c</fullName>
        <label>Total Porcentaje Part</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Saldo_Actual__c</fullName>
        <label>Total Saldo Actual</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Saldo_Mora__c</fullName>
        <label>Total Saldo Mora</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Valor_Cuota__c</fullName>
        <label>Total Valor Cuota</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Valor_Inicial__c</fullName>
        <label>Total Valor Inicial</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valor_Cuota__c</fullName>
        <label>Valor_Cuota</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_Inicial__c</fullName>
        <label>Valor_Inicial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>